feat: add getAllUserCurations
